fixed inventory saving